New WellCreature interface. moving away from SpawnNPC into better idea